<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/format"
        android:layout_width="0dp"
        android:layout_height="719dp"
        android:layout_marginBottom="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Register"
        android:src="@drawable/dashboard_format"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dashboard_format" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/Phone"
        android:textColor="@color/lightblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/Registration"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="378dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="378dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="378dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="378dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:hint="@string/PhoneHint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <Button
        android:id="@+id/register"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/FirstName"
        android:textColor="@color/lightblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <TextView
        android:id="@+id/Year"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/Year"
        android:textColor="@color/lightblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/Email"
        android:textColor="@color/lightblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLastName" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/LastName"
        android:textColor="@color/lightblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <NumberPicker
        android:id="@+id/yearPicker"
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Year" />

</android.support.constraint.ConstraintLayout>